# nftdummies_bot

./: .env.example  .gitignore  README.md  bot.service  dummies.db  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_22_0133-a0ea7df0c7c6_create_users_table.py  2024_07_22_0137-b573492b9248_create_ton_tokens_table.py
bot/: config.py  run.py
bot/db/: engine.py
bot/db/crud/: ton_token_requests.py  user_requests.py
bot/db/models/: __init__.py  base.py  ton_token.py  user.py
bot/filters/: __init__.py  chat_type.py  is_admin.py
bot/handlers/: __init__.py
bot/handlers/admin/: __init__.py  add_sticker.py  admin.py  delete_sticker.py  newsletter.py  update_stickers.py
bot/handlers/user/: __init__.py  inline.py  start.py
bot/keyboards/: inline.py
bot/middlewares/: __init__.py  database.py
bot/states/: __init__.py  admin.py
bot/utils/: __init__.py  generate_stickers.py  messages.py  pytoniq.py  tonapi.py  tonconnect.py  update_stickers.py
bot/utils/get_tokens_price/: ton_tokens.py
nftdummies_bot/: __init__.py  config.py  run.py
nftdummies_bot/db/: crud.py  engine.py  models.py
nftdummies_bot/filters/: is_admin.py
nftdummies_bot/handlers/: __init__.py  admin.py  user.py
nftdummies_bot/middlewares/: __init__.py  database.py
nftdummies_bot/utils/: genereate_stickers.py  texts.py  update_stickers.py
nftdummies_bot/utils/get_tokens_price/: ton_tokens.py
