[tool.poetry]
name = "bot"
version = "0.1.0"
description = "bot for nft dummies ecosystem"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
aiogram = "^3.10.0"
pytoniq = "^0.1.39"
pytonconnect = "^0.3.1"
pytonapi = "^0.3.2"
apscheduler = "^3.10.4"
qrcode = "^7.4.2"
alembic = "^1.13.2"
aiosqlite = "^0.20.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
